change the name adn id
remove platforms
change the name in package.json and ionic.project;

and the name and package in config.xml

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aypic",
+  "name": "scm-blank",
   "version": "1.1.1",
   "description": "aypic: An Ionic project",
   "dependencies": {
