--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1.1"
+    "ionic": "driftyco/ionic-bower#1.1.1",
+    "moment": "~2.10.6"
+  },
+  "dependencies": {
+    "moment": "~2.10.6"
   }
 }
